SBVTestSuite/TestSuite/CompileTests/SCase/SCase04.stderr
SCase04.hs:11:8: error: [GHC-39584]
    sCase: not usable in declaration context
   |
11 | [sCase|Expr e of
   |        ^^^^^^^^^...

